[package]
name = "tag1bot"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
base64 = "0.22"
chatgpt_rs = "1.1.0"
chrono = "0.4"
env_logger = "0.11"
json = "0.12"
lazy_static = "1.4"
log = "0.4.14"
rand = "0.8.5"
regex = "1.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde =  { version = "1.0", features = ["derive"] }
serde_json = "1.0"
slack-rust = { git = "https://github.com/jeremyandrews/slack-rust" }
#slack-rust = { path = "../../rust/slack-rust" }
surf = "2.3"
tokio = { version = "1", features = ["full"] }
